Proxy swap api
